--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -11,6 +11,7 @@
   "author": "Valentina Londoño Marin",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "node-uuid": "^1.4.8"
