--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -9,14 +9,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../phonebook_front && npm run build --prod && cp -r build ../phonebook/",
     "deploy": "cd ../../ git subtree push --prefix part3/phonebook/ heroku main",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "author": "Valentina Londoño Marin",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.4.6",
     "morgan": "^1.10.0",
     "node-uuid": "^1.4.8"
   },
