--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf build && cd ../phonebook_front && npm run build --prod && cp -r build ../phonebook/",
+    "deploy": " cp -r build ../../../fullstackopen-cyclic/",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy-cyclic",
+    "logs:prod": "heroku logs --tail"
   },
   "author": "Valentina Londoño Marin",
   "license": "ISC",
