--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.6",
+    "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
     "node-uuid": "^1.4.8"
   },
