--- a/part4/blogs/package.json
+++ b/part4/blogs/package.json
@@ -4,9 +4,9 @@
   "description": "backend for phonebook application",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest --verbose",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test jest --verbose --runInBand",
     "build:ui": "rm -rf build && cd ../phonebook_front && npm run build --prod && cp -r build ../phonebook/",
     "deploy": "npm run build:ui && git add . && git commit -m uibuild",
     "lint": "eslint ."
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^6.4.6",
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
@@ -25,9 +26,11 @@
   "devDependencies": {
     "eslint": "^8.34.0",
     "jest": "^29.4.2",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "supertest": "^6.3.3"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js"
   }
 }
