--- a/part4/blogs/package.json
+++ b/part4/blogs/package.json
@@ -14,10 +14,12 @@
   "author": "Valentina Londoño Marin",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.4.6",
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
