--- a/part4/blogs/package.json
+++ b/part4/blogs/package.json
@@ -9,7 +9,8 @@
     "test": "NODE_ENV=test jest --verbose --runInBand",
     "build:ui": "rm -rf build && cd ../phonebook_front && npm run build --prod && cp -r build ../phonebook/",
     "deploy": "npm run build:ui && git add . && git commit -m uibuild",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start:test": "NODE_ENV=test node index.js"
   },
   "author": "Valentina Londoño Marin",
   "license": "ISC",
