--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -18,7 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +43,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "cypress": "^12.9.0",
+    "eslint-plugin-cypress": "^2.13.2",
     "eslint-plugin-jest": "^27.2.1"
   }
 }
