--- a/part7/bloglist/front/package.json
+++ b/part7/bloglist/front/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
